<resources>
    <string name="app_name">vk_layouts</string>
    <string name="donations_heading">Пожертвования</string>
    <string name="no_donations_yet">У Вас пока нет сборов.\nНачните доброе дело.</string>
    <string name="create_donation">Создать сбор</string>
    <string name="donation_type_heading">Тип сбора</string>
    <string name="contentDescription">image</string>
    <string name="snippet_title_example">Добряши помогают котикам</string>
    <string name="author_example">Матвей Правосудов</string>
    <string name="dot_separator">•</string>
    <string name="help_type_example">Помощь нужна каждый месяц</string>
    <string name="text_help_button">Помочь</string>
    <string name="result_description_example">Собрано в сентябре 8 750 ₽</string>
    <string name="horizontal_separator">horizontal_separator</string>
    <string name="next">Далее</string>
    <string name="author">Автор</string>
    <string name="payment_string_example">Счет VK Pay • 1234</string>
    <string name="pay_title">Куда получать деньги</string>
    <string name="description_example">На что пойдут деньги и как они кому-то помогут?</string>
    <string name="description">Описание</string>
    <string name="aim_string_example">Например, для лечения человека</string>
    <string name="aim">Цель</string>
    <string name="summa_hint">Сколько нужно собрать?</string>
    <string name="summa">Сумма</string>
    <string name="fee_name_hint">Название сбора</string>
    <string name="fee_name_string">Название сбора</string>
    <string name="download_cover">Загрузить обложку</string>
    <string name="regular_fee">Регулярный сбор</string>

    <string name="first_fragment_label">First</string>
    <string name="second_fragment_label">Second</string>
    <string name="review_message">Привет-привет, добряш!
\n\nЯ создал это событие, чтобы показать какие у меня прекрасные добряши и буду счастлив, если получится вдохновить кого-нибудь хотя бы на маленький перевод в пользу фонда Юна.
\n\n◾ Если получится собрать 1 000 рублей, то это будет 5 обработанных животных от блох и клещей.
\n\n◾ Собранные 5 000 рублей превратятся в 25 кг корма для подопечных фонда.
\n\n◾ А 10 000 рублей позволят провести курс занятий с кинологом по социализации сложной собаки. Чтобы она легче нашла свой дом.
\n\nВ благотворительности не бывает маленьких сумм, поэтому если вы хотите помочь, то переведите любую сумму, будь-то 10 рублей или 1000 💚</string>
    <string name="target_fee">Целевой сбор</string>
    <string name="target_fee_hint">Когда есть определенная цель</string>
    <string name="regular_fee_hint">Если помощь нужна ежемесячно</string>
    <string name="review_heading">Добряши помогают котикам</string>
    <string name="review_author">Автор Матвей Правосудов</string>
    <string name="review_subheading">Помощь нужна каждый месяц</string>
    <string name="progress_heading">Нужно собрать в сентябре</string>
    <string name="sum_received">Собрано 8750 / 10000</string>
    <string name="comment">Комментарий</string>
    <string name="help">Помочь</string>
    <string name="expiration_date">Выберите дату окончания</string>
    <string name="expires">Дата окочания</string>
    <string name="date">В определенную дату</string>
    <string name="when">Когда соберем сумму</string>
    <string name="completes">Сбор завершится</string>
    <string name="create_fee">Создать сбор</string>
    <string name="additional">Дополнительно</string>

    <string-array name="authors">
        <item>Матвей Правосудов</item>
        <item>Мартин Иден</item>
        <item>Джек Лондон</item>
        <item>Эрих Ремарк</item>
    </string-array>
</resources>