<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <androidx.appcompat.widget.Toolbar
        style="@style/VkTheme.Toolbar">
        <TextView
            style="@style/VkTheme.Heading"
            android:text="@string/donations_heading"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorHint"
        android:text="@string/no_donations_yet"
        android:layout_centerInParent="true"
        android:layout_above="@id/create_donation"
        android:layout_marginBottom="24dp"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/create_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/VkTheme.Button"
        android:text="@string/create_donation"
        android:textSize="18sp"
        android:padding="12dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>