<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/snippet">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/contentDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/cat_example"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="145dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/snippet_title_example"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/author_example"
                android:textSize="12sp"
                android:textColor="@color/colorHint"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:id="@+id/author"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/dot_separator"
                android:textSize="12sp"
                android:textColor="@color/colorHint"
                app:layout_constraintStart_toEndOf="@id/author"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:id="@+id/separator"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textSize="12sp"
                android:text="@string/help_type_example"
                android:textColor="@color/colorHint"
                app:layout_constraintStart_toEndOf="@id/separator"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:id="@+id/type"/>

            <Button
                android:id="@+id/help_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="12dp"
                android:text="@string/text_help_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/help_button"
                app:layout_constraintEnd_toStartOf="@+id/help_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:progress="80"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/result_description_example"
                android:layout_margin="8dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintEnd_toStartOf="@+id/help_button"
                app:layout_constraintStart_toStartOf="parent"
               />

            <ImageView
                android:id="@+id/horizontal_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintBottom_toTopOf="@+id/help_button"
                app:layout_constraintTop_toBottomOf="@+id/type"
                android:layout_margin="8dp"
                android:background="@color/colorHint"
                android:contentDescription="@string/horizontal_separator" />







        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>