<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBarLayout"
        style="@style/VkTheme.Toolbar"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_back_icon">

        <TextView
            android:id="@+id/heading"
            style="@style/VkTheme.Heading"
            android:layout_gravity="center"
            android:text="Целевой сбор" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/shape_image"
                android:src="@drawable/cat_example"
                android:visibility="visible"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/roundedImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/White"
                    android:contentDescription="description_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_example" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@drawable/close_icon"
                android:translationZ="4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/card"
                app:layout_constraintEnd_toEndOf="@+id/card"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/card"
                app:layout_constraintTop_toTopOf="@+id/card"
                app:layout_constraintVertical_bias="0.0"
                tools:targetApi="lollipop" />


            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/blue_dotted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="@color/White"
                android:scaleType="fitCenter"
                android:src="@drawable/image_icon"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                
                android:text="@string/download_cover"
                android:textColor="@color/colorVkPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
                app:layout_constraintEnd_toEndOf="@+id/imageButton2"
                app:layout_constraintStart_toStartOf="@+id/imageButton2"
                app:layout_constraintTop_toTopOf="@+id/imageButton2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton2">


                <TextView
                    android:id="@+id/fee_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    
                    android:text="@string/fee_name_string"
                    android:textColor="@color/colorHint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/fee_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    
                    android:hint="@string/fee_name_hint"
                    android:textColor="@color/colorHint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sum_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    
                    android:text="@string/summa"
                    android:textColor="@color/colorHint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/sum_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    
                    android:hint="@string/summa_hint"
                    android:textColor="@color/colorHint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/aim_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    
                    android:text="@string/aim"
                    android:textColor="@color/colorHint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/aim_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    
                    android:hint="@string/aim_string_example"
                    android:textColor="@color/colorHint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/description"
                    android:textColor="@color/colorHint"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/description_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/description_example"
                    android:lines="3"
                    android:textColor="@color/colorHint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pay_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    
                    android:text="@string/pay_title"
                    android:textColor="@color/colorHint"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/pay_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/pay_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    
                    android:lines="1"
                    android:text="@string/payment_string_example"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/author_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/author"
                    android:textColor="@color/colorHint"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/description_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Spinner
                    android:entries="@array/authors"
                    android:id="@+id/author_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    
                    android:textColor="@color/colorHint"
                    android:textSize="16sp"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="48dp"
                    
                    android:text="@string/next"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>